// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart Component should render a basic component: basic 1`] = `
<Context.Provider
  value={
    {
      "chartContainerRef": [Function],
      "chartSettings": {
        "chartDomain": {
          "domain": {
            "y": [
              0,
              10,
            ],
          },
        },
        "chartElementsProps": {
          "elements": [],
          "elementsById": {},
          "stackedElements": [],
          "stackedElementsById": {},
        },
        "chartLegend": undefined,
        "chartWidth": 0,
        "dataSets": [],
        "hasData": true,
        "isMultiYAxis": false,
        "maxX": 0,
        "maxY": 0,
        "padding": {
          "bottom": 75,
          "left": 59,
          "right": 59,
          "top": 50,
        },
        "themeColor": "blue",
        "tooltipDataSetLookUp": {},
        "xAxisProps": {
          "fixLabelOverlap": false,
          "label": undefined,
          "tickFormat": [Function],
          "tickValues": [],
        },
        "yAxisProps": [
          {
            "dependentAxis": true,
            "label": undefined,
            "orientation": "left",
            "showGrid": true,
            "style": {
              "axis": {},
              "tickLabels": {},
            },
            "tickFormat": [Function],
          },
        ],
      },
      "chartTooltipRef": [Function],
      "dataSetsToggle": [
        {},
        [Function],
      ],
    }
  }
>
  <div
    className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading fadein"
    data-test="curiosity-chartarea"
  />
</Context.Provider>
`;

exports[`Chart Component should setup basic chart settings: settings 1`] = `
[
  [
    {
      "children": <div
        className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading fadein"
        data-test="curiosity-chartarea"
      />,
      "value": undefined,
    },
  ],
  [
    {
      "children": <div
        className="curiosity-chartarea uxui-curiosity__modal uxui-curiosity__modal--loading fadein"
        data-test="curiosity-chartarea"
      />,
      "value": {
        "chartContainerRef": [Function],
        "chartSettings": {
          "chartDomain": {
            "domain": {
              "y": [
                0,
                3,
              ],
            },
          },
          "chartElementsProps": {
            "elements": [
              {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-ipsumGraph-",
                  "name": "chart-ipsumGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeDasharray": "4,3",
                      "strokeWidth": 3,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            ],
            "elementsById": {
              "ipsumGraph": {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-ipsumGraph-",
                  "name": "chart-ipsumGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeDasharray": "4,3",
                      "strokeWidth": 3,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            },
            "stackedElements": [
              {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-loremGraph-",
                  "name": "chart-loremGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeWidth": 2,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            ],
            "stackedElementsById": {
              "loremGraph": {
                "chartType": undefined,
                "props": {
                  "data": [
                    {
                      "x": 1,
                      "xAxisLabel": "1 x axis label",
                      "y": 1,
                    },
                    {
                      "x": 2,
                      "xAxisLabel": "2 x axis label",
                      "y": 2,
                    },
                  ],
                  "key": "chart-loremGraph-",
                  "name": "chart-loremGraph-",
                  "style": {
                    "data": {
                      "fill": "#ipsum",
                      "stroke": "#lorem",
                      "strokeWidth": 2,
                    },
                  },
                  "themeColor": undefined,
                  "themeVariant": undefined,
                  "x": undefined,
                  "y": [Function],
                },
              },
            },
          },
          "chartLegend": undefined,
          "chartWidth": 0,
          "dataSets": [
            {
              "data": [
                {
                  "x": 1,
                  "xAxisLabel": "1 x axis label",
                  "y": 1,
                },
                {
                  "x": 2,
                  "xAxisLabel": "2 x axis label",
                  "y": 2,
                },
              ],
              "fill": "#ipsum",
              "id": "loremGraph",
              "isStacked": true,
              "stroke": "#lorem",
              "strokeWidth": 2,
            },
            {
              "data": [
                {
                  "x": 1,
                  "xAxisLabel": "1 x axis label",
                  "y": 1,
                },
                {
                  "x": 2,
                  "xAxisLabel": "2 x axis label",
                  "y": 2,
                },
              ],
              "fill": "#ipsum",
              "id": "ipsumGraph",
              "isThreshold": true,
              "stroke": "#lorem",
              "strokeDasharray": "4,3",
              "strokeWidth": 3,
            },
          ],
          "hasData": true,
          "isMultiYAxis": false,
          "maxX": 2,
          "maxY": 2,
          "padding": {
            "bottom": 75,
            "left": 55,
            "right": 55,
            "top": 50,
          },
          "themeColor": "blue",
          "tooltipDataSetLookUp": {
            "1": {
              "itemsByKey": {
                "ipsumGraph": {
                  "chartType": undefined,
                  "color": "#lorem",
                  "data": {
                    "x": 1,
                    "xAxisLabel": "1 x axis label",
                    "y": 1,
                  },
                },
                "loremGraph": {
                  "chartType": undefined,
                  "color": "#lorem",
                  "data": {
                    "x": 1,
                    "xAxisLabel": "1 x axis label",
                    "y": 1,
                  },
                },
              },
              "tooltip": undefined,
              "x": 1,
              "y": null,
            },
            "2": {
              "itemsByKey": {
                "ipsumGraph": {
                  "chartType": undefined,
                  "color": "#lorem",
                  "data": {
                    "x": 2,
                    "xAxisLabel": "2 x axis label",
                    "y": 2,
                  },
                },
                "loremGraph": {
                  "chartType": undefined,
                  "color": "#lorem",
                  "data": {
                    "x": 2,
                    "xAxisLabel": "2 x axis label",
                    "y": 2,
                  },
                },
              },
              "tooltip": undefined,
              "x": 2,
              "y": null,
            },
          },
          "xAxisProps": {
            "fixLabelOverlap": false,
            "label": undefined,
            "tickFormat": [Function],
            "tickValues": [
              1,
              2,
            ],
          },
          "yAxisProps": [
            {
              "dependentAxis": true,
              "label": undefined,
              "orientation": "left",
              "showGrid": true,
              "style": {
                "axis": {},
                "tickLabels": {},
              },
              "tickFormat": [Function],
            },
          ],
        },
        "chartTooltipRef": [Function],
        "dataSetsToggle": [
          {},
          [Function],
        ],
      },
    },
  ],
]
`;
